<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Bee La</string>
    <string name="BeeLa">Bee La</string>


    <!--Alterar senha-->
    <string name="SenhaAtual">Senha Atual</string>
    <string name="NovaSenha">Nova Senha</string>
    <string name="RepetirSenha">Repetir Senha</string>
    <string name="senhaAlterada">Senha alterada</string>
    <string name="senhaAtualDiferente">Senha Atual Diferente</string>

    <!--Anterar nome-->
    <string name="NovoNome">Novo Nome</string>
    <string name="nomesIguais">Nomes Iguais</string>
    <string name="nomeAlterado">Nome Alterado</string>


    <!--Apagar Conta-->
    <string name="avisoApagar1">Atenção, \napagar sua conta irá:</string>
    <string name="avisoApagar2">- Excluir sua conta no Bee La; \n- Apagar seu histórico de lugares; \n- Prosseguir com a exclusão de sua conta? Será impossível reverter esta ação.</string>
    <string name="apagarMinhaConta">Apagar Minha Conta</string>
    <string name="contaDeletada">Conta Deletada</string>

    <!--Configurações-->
    <string name="Configuracoes">Configurações</string>
    <string name="AlterarNome">Alterar Nome</string>
    <string name="AlterarSenha">Alterar Senha</string>
    <string name="ApagarConta">Apagar Conta</string>
    <string name="Sair">Sair</string>
    <string name="alterar">Alterar:</string>


    <!--Usuario GUI login e Criar conta-->
    <string name="Senha">Senha</string>
    <string name="Email">E-mail</string>
    <string name="Lembrar">Lembrar de mim</string>
    <string name="criarConta">Criar Conta</string>
    <string name="Entrar">Entrar</string>
    <string name="Esqueceu">Esqueceu sua senha?</string>

    <!-- Criar Conta-->
    <string name="NomeCriarC">Nome</string>
    <string name="CelularCriarC">Celular</string>
    <string name="emailCriarC">E-mail</string>
    <string name="senhaCriarC">Senha</string>
    <string name="repetirSenhaCriarC">Repetir Senha</string>
    <string name="criar">Criar</string>
    <string name="emailExiste">O Email já existe</string>
    <string name="celularExiste">O Celular já existe</string>

    <!--Home-->
    <string name="E_ai">E ai, \nqual vai ser?</string>
    <string name="Nome">nome</string>
    <string name="O_que_tu_quer">O que tu quer\n eu quero!</string>

    <!--Geral-->
    <string name="Alterar">Alterar</string>
    <string name="contaCriada">Conta Criada</string>

    <!--Validação de campos-->
    <string name="emailInvalido">Email Inválido</string>
    <string name="senhaInvalida">Senha Inválida</string>
    <string name="campoVazio">Campo Vazio</string>
    <string name="celularInvalido">Celular Inválido</string>
    <string name="senhasDiferentes">Senhas Diferentes</string>
    <string name="erroNoLoginDoBanco">Email ou Senha Inválidos</string>

    <!--Esqueceu Senha-->
    <string name="esqueciSenha">Esqueci minha senha</string>
    <string name="redefinirSenha">Enviaremos um link para seu email para você redefinir sua senha.</string>
    <string name="enviarCodigo">Enviar</string>
    <string name="implementarFunc">Funcionalidade a ser implementada</string>

    <string name="title_activity_perfis">Perfis</string>


    <!--Adicionar Perfil-->
    <string name="comecar">Começar</string>
    <string name="adicionarPerfil">Adicionar Perfil</string>
    <string name="massas">Massas</string>
    <string name="orientais">Orientais</string>
    <string name="carnes">Carnes</string>
    <string name="vegetariano">Vegetariano</string>
    <string name="tipoMusica">Qual tipo de música você \nprefere?</string>
    <string name="forro">Forró</string>
    <string name="sambaPagode">Samba/Pagode</string>
    <string name="sertanejo">Sertanejo</string>
    <string name="rock">Rock</string>
    <string name="nomePerfil">Nome Perfil</string>
    <string name="nomeDoPerfil">Nome do Perfil</string>
    <string name="nomear">Nomear</string>
    <string name="perfilprioridade">perfilprioridade</string>
    <string name="prioridadePerfil">Perfil Prioridade</string>
    <string name="selecionarPerfil">Selecione apenas um perfilAtual</string>
    <string name="perfilAtual">Perfil Atual:</string>

    <!--Excluir Perfil-->
    <string name="sim">sim</string>
    <string name="nao">não</string>
    <string name="excluirPerfil">Excluir</string>
    <string name="excluidoSucesso">Perfil excluído</string>
    <string name="maximoPerfis">O máximo são 3 perfis</string>
    <string name="verificarExcluirPerfil">Excluir perfilAtual </string>
    <string name="sinalInterrogacao">\?</string>
    <string name="perfilExiste">Nome do perfilAtual já existente</string>

    <!--Lugar-->
    <string name="erroNaoTemGoogleMaps">Verifique se o Google Maps está instalado em seu dispositivo</string>
    <string name="comandoAppMaps">com.google.android.apps.maps</string>
    <string name="comandoMapsActivity">com.google.android.maps.MapsActivity</string>

    <!--PerfilService-->
    <string name="Comidas">Comidas</string>
    <string name="Musicas">Músicas</string>
    <string name="Esportes">Esportes</string>
    <string name="Massas">Massas</string>
    <string name="Vegetariano">vegetariano</string>
    <string name="sozinho">Sozinho</string>
    <string name="acompanhado">Acompanhado</string>

    <!--Contatos-->
    <string name="contatos">Contatos</string>
    <string name="confirmar">Confirmar</string>
    <string name="naoConta">Não tem Conta ?</string>
    <string name="crieAqui">Crie Aqui</string>

    <!--Lugares-->
    <string name="lugares">Lugares</string>
    <string name="lugarMaps">lugarmaps</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="lugar">lugar</string>
    <string name="erro">Erro</string>
    <string name="drawable">drawable</string>
    <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque maximus feugiat porttitor. Sed scelerisque erat eu diam sollicitudin tristique id quis tellus. Aliquam eget suscipit eros. Integer auctor sagittis lectus, ut commodo erat blandit id. Nulla sit amet neque a tortor fringilla volutpat. Mauris sed arcu est. Mauris ultricies augue non tristique molestie.</string>

    <!--Alimenta Banco de Dados-->
    <string name="ru">RU - UFRPE</string>
    <string name="selfService">Self-Service</string>
    <string name="localRU">-8.014121,-34.951131</string>
    <string name="caminhoRu">ru</string>
    <string name="musicaVariada">Variadas</string>

    <string name="igrejaCarmo">Igreja Do Carmmo</string>
    <string name="igrejaDesc">Igreja</string>
    <string name="igLocal">-8.0168458,-34.849372</string>
    <string name="igCaminho">igreja_carmo</string>
    <string name="strNull">Null</string>
    <string name="igMusica">Padre Marcelo Rossi</string>
    <string name="igNome">Igreja</string>

    <string name="rockRibs">RockRibs</string>
    <string name="ribsDesc">Restaurante</string>
    <string name="ribsLocal">-8.0640944,-34.8714444</string>
    <string name="ribsCaminho">rock_ribs</string>

    <string name="shopRec">Shopping Recife</string>
    <string name="shopDesc">Shopping Center</string>
    <string name="shopLocal">-8.0640944,-34.8714444</string>
    <string name="shopCaminho">shopping_recife</string>
    <string name="fastFood">FastFood</string>
    <string name="pizza">pizza</string>

    <string name="mirabi">Mirabilandia</string>
    <string name="mirabiDesc">Parque de Diversões</string>
    <string name="mirabiLocal">-8.0326104,-34.875884</string>
    <string name="mirabiCaminho">mirabilandia</string>

    <string name="bailePerf">Baile Perfumado</string>
    <string name="casaShow">Casa de Show</string>
    <string name="baileLocal">-8.0592289,-34.9145652</string>
    <string name="baileCaminho">baile_perfumado</string>

    <string name="jaqueira">Parque Jaqueira</string>
    <string name="parque">Parque</string>
    <string name="jaqueiraLocal">-8.0374702,-34.9746089</string>
    <string name="jaqueiraCaminho">jaqueira</string>
    <string name="caminhada">Caminhada</string>
    <string name="corrida">Corrida</string>
    <string name="ciclismo">Ciclismo</string>
    <string name="erroMapa">ERRO MAPA</string>
<<<<<<< Updated upstream
    <string name="beboRockRibs">Bebo Rock Bar</string>
    <string name="containerRockBar">ContainerRockBar</string>
    <string name="camaleaoBar">Camaleão Bar</string>
    <string name="bar">Bar</string>
    <string name="downtownPub">Downtown Pub</string>
    <string name="saladeReboco">Salade Reboco</string>
    <string name="boyzinhoBar">Boyzinho Bar</string>
    <string name="casadeSamba">Casa de Samba</string>
    <string name="emporioSertanejo">Emporio Sertanejo</string>
    <string name="praiaBoaViagem">Praia Boa Viagem</string>
    <string name="praiaX">praiax</string>
    <string name="futebol">Futebol</string>
    <string name="volei">Volei</string>
=======
    <string name="visualizarTodos">Visualizar todos</string>
    <string name="avancar">Avançar</string>
>>>>>>> Stashed changes

</resources>
