<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/preto"
    tools:context="br.ufrpe.beela.GUI.ApagarConta">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/preto"
        tools:context="br.ufrpe.beela.GUI.ApagarConta">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="242dp"
        android:layout_height="83dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:text="@string/avisoApagar1"
        android:textColor="@color/avisoApagar"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.365"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="278dp"
        android:layout_height="97dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/avisoApagar2"
        android:textColor="@color/branco"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="62dp"
            android:layout_marginTop="68dp"
            android:background="@color/avisoApagar"
            android:text="@string/apagarMinhaConta"
            android:textAllCaps="false"
            android:textColor="@color/branco"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

</android.support.constraint.ConstraintLayout>
</ScrollView>