<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/preto"
    tools:context="br.ufrpe.beela.usuario.gui.EsqueceuSenhaAct">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/preto"
        tools:context="br.ufrpe.beela.usuario.gui.EsqueceuSenhaAct">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/redefinirSenha"
            android:textAlignment="viewStart"
            android:textColor="@color/branco"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button12"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/criarConta"
            android:text="@string/enviarCodigo"
            android:textAllCaps="false"
            android:textColor="@color/branco"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText13" />

        <EditText
            android:id="@+id/editText13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textPersonName"
            android:textColor="@color/branco"
            android:textColorHint="@color/textoEntrada"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.287"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>